# SGEMM

./: CMakeLists.txt  README  runTest.sh
inc/: native.h  optimization.h  test_sgemm.h
src/: Main.c  native.c  optimization.c  test_sgemm.c
